<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">helloAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Say something</string>
    <string name="default_message">Click button below!</string>
    <string name="interact_message">You just clicked on the Button!</string>
    <string name="map_text1">Hello Map</string>
    <string name="map_back">return main</string>
    <string name="map_vchange">visible</string>
    <string name="main_gomap">go map</string>
    
    <string name="map_image1_des"></string>
</resources>
