<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <RelativeLayout android:layout_width="match_parent" android:layout_weight="1" android:layout_height="0dp">
        <TextView android:id="@+id/map_text1" android:layout_width="wrap_content" android:layout_height="match_parent"
            android:text="@string/map_text1" android:textSize="20sp"/>
         <Button android:id="@+id/map_backB" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_toRightOf="@id/map_text1" android:text="@string/map_back"/>
         <Button android:id="@+id/map_changeB" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_toRightOf="@id/map_backB" android:text="@string/map_vchange"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_weight="1" android:background="#0000FF" android:layout_height="0dp"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_weight="4" android:layout_height="0dp">
        <ImageView android:id="@+id/map_image1" android:contentDescription="@string/map_image1_des"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:src="@drawable/map_image1"/>
    </RelativeLayout> 

</LinearLayout>
