<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helloandroid.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:text="@string/default_message"
            android:id="@+id/hellotextView" android:textColor="#00ff00" android:gravity="center"/>
    <Button
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="@string/button_send"
            android:layout_marginLeft ="20dp"
            android:id="@+id/hellobutton" android:layout_gravity="center"/>
    <Button 
        android:id="@+id/go_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_gomap"
        android:layout_toRightOf="@id/hellobutton"/>
    <TextView 
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hellobutton"
        android:text="tx2"
        />

</RelativeLayout>
